--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,69 @@
-.App {
-  text-align: center;
+*{
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
+  height: 100vh;
+  /* width: 100vw; */
+  background-position: center center;
+  background-size: cover;
+  font-family: "Merriweather Sans", sans-serif;
+  transition-duration: 1s;
+  overflow: hidden;
+  color: black;
   display: flex;
   flex-direction: column;
+  justify-content:center ;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+  font-size: 15px;
 }
-
-.App-link {
-  color: #61dafb;
+.btns{
+  height: 30px;
+  /* padding: 30px !important; */
+  margin: 20px;
 }
+.weather{
+  /* border: 1px solid black; */
+  margin-top: 30px;
+  
+}
+.box1{
+display: flex;
+border: 1px solid black;
+background-color: white;
+margin: 10px auto;
+width: 80%;
+border-radius: 10px;
+border: 1px solid greenyellow;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.box{
+  text-align: center;
+  width: 40%;
+
+}
+input{
+  width: 100%;
+  height: 35px;
+  font-size: larger;
+outline: none;
+border: none;
+border-radius: 10px;
+padding: 10px;
+
+}
+button{
+  padding: 10px ;
+color: black;
+font-weight: bold;
+border: none;
+border-radius: 10px;
+background-color: greenyellow;
+
+}
+h1{
+  margin-top: 10px;
 }
